--- a/notebooks/mathematics/series_and_sequences/Fourier Series.ipynb
+++ b/notebooks/mathematics/series_and_sequences/Fourier Series.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(fourier_series)=\n",
     "# Fourier Series \n",
     "```{index} Fourier series\n",
     "```\n",
