--- a/notebooks/mathematics/series_and_sequences/Taylor_series.ipynb
+++ b/notebooks/mathematics/series_and_sequences/Taylor_series.ipynb
@@ -2,29 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Motivation---a-constant-approximation\" data-toc-modified-id=\"Motivation---a-constant-approximation-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Motivation - a constant approximation</a></span></li><li><span><a href=\"#Motivation---a-linear-approximation-(a-&quot;linearisation&quot;)\" data-toc-modified-id=\"Motivation---a-linear-approximation-(a-&quot;linearisation&quot;)-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Motivation - a linear approximation (a \"linearisation\")</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Taylor-series-example\" data-toc-modified-id=\"Taylor-series-example-2.0.1\"><span class=\"toc-item-num\">2.0.1&nbsp;&nbsp;</span>Taylor series example</a></span></li></ul></li><li><span><a href=\"#Aside:-Big-O-notation\" data-toc-modified-id=\"Aside:-Big-O-notation-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Aside: Big O notation</a></span></li></ul></li><li><span><a href=\"#Truncation-error\" data-toc-modified-id=\"Truncation-error-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Truncation error</a></span></li><li><span><a href=\"#FURTHER-READING:\" data-toc-modified-id=\"FURTHER-READING:-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span><strong>FURTHER READING:</strong></a></span></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(taylor_series)=\n",
     "# Taylor series\n",
     "\n",
     "A Taylor series is a method by which we can approximate an arbitrary function by a sum of terms made up of that function and its derivatives at a single point.\n",
@@ -53,6 +33,17 @@
     "\"... This makes persistence a 'hard to beat' method for forecasting longer time periods\": <http://ww2010.atmos.uiuc.edu/(Gh)/guides/mtr/fcst/mth/prst.rxml>\n",
     "\n",
     "Let's consider an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -366,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
