--- a/_sources/mathematics/series_and_sequences/Fourier Transforms.ipynb
+++ b/_sources/mathematics/series_and_sequences/Fourier Transforms.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(fourier_transforms)=\n",
     "# Fourier Transforms\n",
     "```{index} Fourier transforms\n",
     "```\n",
