Change for consistent titles (Fourier series+transforms)

--- a/notebooks/mathematics/series_and_sequences/Fourier Series.ipynb
+++ b/notebooks/mathematics/series_and_sequences/Fourier Series.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "(fourier_series)=\n",
-    "# Fourier Series \n",
+    "# Fourier series \n",
     "```{index} Fourier series\n",
     "```\n",
     "The Fourier series enables us to represent _periodic_ functions as infinite sums. Particularly, it represents functions as a sum of weighted $\\sin$ and $\\cos$ functions.\n",
