--- a/_sources/mathematics/series_and_sequences/Fourier Transforms.ipynb
+++ b/_sources/mathematics/series_and_sequences/Fourier Transforms.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "(fourier_transforms)=\n",
-    "# Fourier Transforms\n",
+    "# Fourier transforms\n",
     "```{index} Fourier transforms\n",
     "```\n",
     "Fourier transforms are mathematical operations which when acted on a function, decomose it to its constituent frequencies. In the Fourier Series course, we have shown that a periodic function can be expressed as an infinite sum of sine and cosine functions. We have also shown that, through scaling laws, we can extend the period of the function to an arbitrary length. If the highest frequency in the Fourier Series is kept the same and we keep extending the period of the function, the sum will become longer and longer. In the limit where the period is expanded to infinity, the sum will become an integral, resulting to the definition of the *Fourier Transform*.\n",
