Maths fixes - series and sequences

--- a/notebooks/c_mathematics/series_and_sequences/Basic_Sequences_Series.ipynb
+++ b/notebooks/c_mathematics/series_and_sequences/Basic_Sequences_Series.ipynb
@@ -410,9 +410,9 @@
    "source": [
     "### Taylor series\n",
     "\n",
-    "The more terms there are in the series the more accurate it is as it better approximates the function. The error of the Taylor series decreases as \\\\(x\\\\) approaches \\\\(0\\\\).\n",
+    "The more terms there are in the series the more accurate it is as it better approximates the function. The error of the Taylor series decreases as $x$ approaches $0$.\n",
     "\n",
-    "#### \\\\( \\ln(1+x) \\\\) with different number of terms \\\\(n\\\\):"
+    "#### $ \\ln(1+x) $ with different number of terms $n$:"
    ]
   },
   {
@@ -480,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### \\\\( \\exp(x) \\\\) with different number of terms \\\\(n\\\\)"
+    "#### $ \\exp(x) $ with different number of terms $n$"
    ]
   },
   {
@@ -548,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### \\\\( \\sin(x) \\\\) with different number of terms \\\\(n\\\\)"
+    "#### $ \\sin(x) $ with different number of terms $n$"
    ]
   },
   {
