--- a/notebooks/c_mathematics/series_and_sequences/Fourier_series.ipynb
+++ b/notebooks/c_mathematics/series_and_sequences/Fourier_series.ipynb
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's plot the Fourier Series for \\\\( n=10, n=50,\\\\) and \\\\(n=100\\\\)."
+    "Now let's plot the Fourier Series for $ n=10, n=50,$ and $n=100$."
    ]
   },
   {
@@ -255,23 +255,23 @@
     "```{admonition} Properties of odd and even functions\n",
     "The following properties are very useful in Fourier analysis:\n",
     "- The product of two odd functions is an even function:\n",
-    "\\\\[o_1(x)o_2(x) = e(x).\\\\]\n",
+    "$$o_1(x)o_2(x) = e(x).$$\n",
     "\n",
     "\n",
     "- The product of two even functions is an even function:\n",
-    "\\\\[e_1(x)e_2(x) = e(x).\\\\]\n",
+    "$$e_1(x)e_2(x) = e(x).$$\n",
     "\n",
     "\n",
     "- The product of an even and an odd function is an odd function:\n",
-    "\\\\[e_1(x)o_1(x) = o(x).\\\\]\n",
+    "$$e_1(x)o_1(x) = o(x).$$\n",
     "\n",
     "\n",
     "- The integral of an odd function on a *symmetric* interval is zero:\n",
-    "\\\\[\\int_{-a}^{a} o(x)dx = 0.\\\\]\n",
+    "$$\\int_{-a}^{a} o(x)dx = 0.$$\n",
     "\n",
     "\n",
     "- The integral of an even function on a *symmetric* interval is twice the integral of the postive part:\n",
-    "\\\\[\\int_{-a}^{a} e(x)dx = 2\\int_{0}^{a} e(x)dx.\\\\]\n",
+    "$$\\int_{-a}^{a} e(x)dx = 2\\int_{0}^{a} e(x)dx.$$\n",
     "\n",
     "```\n",
     "\n",
