--- a/notebooks/c_mathematics/series_and_sequences/Taylor_series.ipynb
+++ b/notebooks/c_mathematics/series_and_sequences/Taylor_series.ipynb
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As an alternative to writing \"\\\\( \\ldots \\\\)\" in the above infinite expansions, we can also write \n",
+    "As an alternative to writing \"$ \\ldots $\" in the above infinite expansions, we can also write \n",
     "\n",
     "$$f(x) = f(x_0) + (x - x_0) f'(x_0) + \\frac{(x - x_0)^2}{2!} f''(x_0) + \\frac{(x - x_0)^3}{3!} f'''(x_0) + \\mathcal{O}((x - x_0)^4)$$\n",
     "\n",
