--- a/notebooks/c_mathematics/series_and_sequences/Fourier_transforms.ipynb
+++ b/notebooks/c_mathematics/series_and_sequences/Fourier_transforms.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "With a Fourier Transform of\n",
     "\n",
-    "$$F(\\omega) = sinc({\\omega}/2),$$\n",
+    "$$F(\\omega) = \\text{sinc}({\\omega}/2),$$\n",
     "\n",
     "\n",
     "let's plot the function and its Fourier Transform."
@@ -262,11 +262,11 @@
     "\n",
     "A Gaussian function is defined as \n",
     "\n",
-    "$$ f(t) = exp\\left(- \\frac{t^2}{2{\\sigma^2}}\\right), $$\n",
+    "$$ f(t) = \\exp\\left(- \\frac{t^2}{2{\\sigma^2}}\\right), $$\n",
     "\n",
     "where $\\sigma$ is the standard devation of the Gaussian. The Fourier transform of a gaussian is another Gaussian such that\n",
     "\n",
-    "$$ \\mathcal{F}[f(t)] = \\sqrt{2\\pi}\\, exp\\left(- \\frac{\\omega^2\\sigma^2}{2}\\right) $$\n",
+    "$$ \\mathcal{F}[f(t)] = \\sqrt{2\\pi}\\, \\exp\\left(- \\frac{\\omega^2\\sigma^2}{2}\\right) $$\n",
     "\n",
     "Thus, we can see that as the Gaussian function gets broader, its Fourier Transform gets narrower. To illustrate this, let's plot the Gaussian and its transform for two different standard deviations."
    ]
@@ -523,18 +523,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADD AN EXAMPLE OF HOW CONVOLUTION CAN BE USED IN CODE?**\n",
+    "TODO: **ADD AN EXAMPLE OF HOW CONVOLUTION CAN BE USED IN CODE?**\n",
     "\n",
     "## References\n",
     "\n",
     "- Material used in this notebook was based on the \"Fourier Transforms\" course by professor Carlo Contaldi provided by the Physics Department."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
