--- a/notebooks/demo/RK-biology.ipynb
+++ b/notebooks/demo/RK-biology.ipynb
@@ -9,9 +9,8 @@
     ]
    },
    "source": [
-    "# Runge-Kutta method\n",
-    "```{index} Runge-Kutta method\n",
-    "```\n",
+    "# Runge-Kutta method - biology example\n",
+    "\n",
     "[Runge-Kutta](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) (RK4) is most commonly used method for integrating {ref}`Ordinary Differential Equations (ODEs) <ode_linear>`. This method takes into account slope at the beginning, middle (twice) and the end of interval to integrate an ODE with a 4th order accuracy.\n",
     "\n",
     "## 1st order ODE integration\n",
